- fixed upcoming appointments not showing up bug, (old json field name)

--- a/frontend/src/pages/admin/AdminClients/AdminClients.module.scss
+++ b/frontend/src/pages/admin/AdminClients/AdminClients.module.scss
@@ -48,11 +48,11 @@
     }
   }
 
-  .next-appointment-container {
+  .upcoming-appointment-container {
     display: flex;
     flex-direction: start;
 
-    .next-appointment {
+    .upcoming-appointment {
       width: 6.5rem;
 
       display: flex;
